<?xml version="1.0"?>
<package format="2">
    <name>pcdfilter_pa</name>
    <version>1.0.0</version>
    <description>ProAut pointcloud filter package</description>
    <maintainer email="wepet@hrz.tu-chemnitz.de">Peter Weissig</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>


    <depend>roscpp</depend>

    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>std_srvs</depend>

    <depend>tf</depend>
    <depend>laser_geometry</depend>

    <depend>cv_bridge</depend>
    <depend>image_transport</depend>

    <depend>pcl_ros</depend>
    <depend>pcl_conversions</depend>

    <depend>parameter_pa</depend>


    <build_depend>message_generation</build_depend>
    <build_export_depend>message_runtime</build_export_depend>
    <exec_depend>message_runtime</exec_depend>


    <doc_depend>doxygen</doc_depend>
    <doc_depend>parameter_pa</doc_depend>

</package>
